xml/tests/testData/xml/WrongRegExpCategory.xsd
<xs:schema xmlns:xs="http://www.w3.org/2001/XMLSchema">
<xs:simpleType name="TestType">
  <xs:restriction base="xs:string">
  <xs:pattern value="[\p{IsBasicLatin}]*"/>
  <xs:pattern value="[\p{<error descr="Unknown character category">IsUnknown</error>}]*"/>
  <xs:pattern value="\p{Cc}+"/>
  <xs:pattern value="\p{<error descr="Unknown character category">IsCc</error>}+"/>
  </xs:restriction>
</xs:simpleType>

</xs:schema>